--- a/CSS/style.css
+++ b/CSS/style.css
@@ -46,7 +46,7 @@
 
 .integrante_img{
 
-    width: 40%;
+    width: 50%;
 
     padding-top: 3%;
 
@@ -66,7 +66,7 @@
 }
 
 
-.nosotros_titulo{
+.titulo_modelo{
 
     color:#018DC8;
     font-weight: 600;
@@ -185,6 +185,30 @@ img {
     width: 300px;
 }
 
+
+
+/**Página Gato***/
+
+.img_gato{
+
+    
+    width: 300px;
+    height: 250px;
+    
+    
+}
+
+.gato_nombre{
+    margin-bottom: 40px;
+}
+
+.nom_boton_g{
+    margin-top: 40px;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 30px;
+}
 
 
 
